day 36 completed
Replace deprecated new Integer(20) with Integer.valueOf(20) and add an explicit unboxing example (Integer x = 20; int y = x). Also add a clarifying comment about implicit unboxing on the earlier print statement and minor formatting adjustments.