@@ -11,11 +11,14 @@ public class WrapperClass {
 			
 			
 			System.out.println(a);
-			System.out.println(b);
+			System.out.println(b); // unboxing happen here because java does add intValue() method implicitly.
 			
 			
-			Integer ab = new Integer(20); // it is depricated means it does not uses in new java. but it is valid.
+			Integer ab = Integer.valueOf(20); // it is depricated means it does not uses in new java. but it is valid.
 			
+			
+			Integer x = 20;
+			int y = x ; // unboxing
 		}
 		
 }
